apps/subsystems/bitwarden/middleware-stripprefix.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: bitwarden
spec:
  stripPrefix:
    prefixes:
    - /api
    - /attachments
    - /icons
    - /notifications
    - /events
    - /scim
