apps/subsystems/bitwarden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
